Fixed header alignment

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body {
 
 #site-header > nav {
     display: flex;
+    align-items: end;
 }
 
 #site-header > nav > .hamburger {
